<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:foregroundTint="@color/purple_200"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enea_alina_mihaela_tf_Nume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext_radius"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enea_alina_mihaela_tiet_Nume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nume"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/enea_alina_mihaela_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="32dp"
        android:minHeight="48dp"
        android:text="@string/accept"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/enea_alina_mihaela_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></CheckBox>

    <TextView
        android:id="@+id/enea_alina_mihaela_tv_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:text="@string/terms_text"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/enea_alina_mihaela_agree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enea_alina_mihaela_tf_Prenume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext_radius"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enea_alina_mihaela_tf_Nume">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enea_alina_mihaela_tiet_Prenume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenume"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enea_alina_mihaela_tf_Varsta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext_radius"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enea_alina_mihaela_tf_Prenume">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enea_alina_mihaela_tiet_Varsta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/varsta"
            android:inputType="number"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/enea_alina_mihaela_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:shadowColor="@color/black"
        android:text="@string/log_in"
        android:background="@drawable/edittext_radius"
        android:padding="5dp"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>